[gd_scene load_steps=5 format=3 uid="uid://14tp0fftlq7s"]

[ext_resource type="Script" path="res://building_system/scripts/ui/main_menu.gd" id="1_jt5ea"]
[ext_resource type="Shader" path="res://building_system/assets/shaders/menu_blur.gdshader" id="2_wpr67"]
[ext_resource type="Script" path="res://building_system/scripts/ui/blur.gd" id="3_jbdpi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pwddc"]
shader = ExtResource("2_wpr67")
shader_parameter/viewport_size = null

[node name="MainMenuInterface" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jt5ea")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pwddc")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_jbdpi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MainMenu" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="PanelContainer/MarginContainer/MainMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "New Game"

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/MainMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="PanelContainer/MarginContainer/MainMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Load"

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/MainMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Exit"
